# goke_webcam

./: .gitignore  CMakeLists.txt  Makefile  backup  main.c  main.h
common/: h264.c  h264.h  jpeg.c  jpeg.h  log.c  log.h  misc.c  misc.h  ntpc.c  ntpc.h  time.c  time.h  tools_interface.h
common/buffer/: msg_buffer.c  msg_buffer.h
common/cJSON/: cJSON.c
common/config/: rwio.c  rwio.h
common/json/: json.c  json.h
global/: common.c  config.c  config.h  global.c  global_interface.h
gmp/modules/init/linux/: adc_init.c
gmp/modules/isp/ext_drv/gk7205v200/sensor_i2c/: sensor_i2c.c
gmp/modules/isp/ext_inc/: isp_ext.h
gmp/modules/isp/include/: comm_isp.h
gmp/modules/isp/kernel/mkp/src/: isp.c
gmp/modules/isp/user/3a/include/: ae_comm.h  af_comm.h  awb_comm.h  ot_mpi_ae.h  ot_mpi_awb.h
gmp/modules/isp/user/3a/sample_ae/: sample_ae_adp.c  sample_ae_adp.h  sample_ae_ext_config.h  sample_ae_mpi.c  sample_ae_mpi.h
gmp/modules/isp/user/3a/sample_awb/: sample_awb_adp.c  sample_awb_adp.h  sample_awb_ext_config.h  sample_awb_mpi.c
gmp/modules/osal/linux/kernel/: osal_device.c
gmp/modules/osal/linux/kernel/mmz/: allocator.c  cma_allocator.c  media-mem.c
library_goke/aliyun/linkvisual/: link_visual_api.h  link_visual_enum.h  link_visual_struct.h
library_goke/freetype2/lib/: libfreetype.la
library_goke/freetype2/lib/pkgconfig/: freetype2.pc
library_goke/gdb/share/info/: gdb.info  stabs.info
library_goke/iw/sbin/: iw
library_goke/json-c/lib/: libjson-c.la  libjson-c.so.4.0.0
library_goke/json-c/lib/pkgconfig/: json-c.pc
library_goke/libjpeg-turbo/lib/: libjpeg.so.62.3.0  libturbojpeg.so.0.2.0
library_goke/libjpeg-turbo/lib/cmake/libjpeg-turbo/: libjpeg-turboTargets-release.cmake
library_goke/libjpeg-turbo/lib/pkgconfig/: libjpeg.pc  libturbojpeg.pc
library_goke/libnl/lib/: libnl-3.la  libnl-3.so.200.26.0  libnl-cli-3.la  libnl-cli-3.so.200.26.0  libnl-genl-3.la  libnl-genl-3.so.200.26.0  libnl-idiag-3.la  libnl-idiag-3.so.200.26.0  libnl-nf-3.la  libnl-nf-3.so.200.26.0  libnl-route-3.la  libnl-route-3.so.200.26.0  libnl-xfrm-3.la  libnl-xfrm-3.so.200.26.0
library_goke/libnl/lib/libnl/cli/cls/: basic.la  cgroup.la
library_goke/libnl/lib/libnl/cli/qdisc/: bfifo.la  blackhole.la  fq_codel.la  hfsc.la  htb.la  ingress.la  pfifo.la  plug.la
library_goke/libnl/lib/pkgconfig/: libnl-3.0.pc  libnl-cli-3.0.pc  libnl-genl-3.0.pc  libnl-idiag-3.0.pc  libnl-nf-3.0.pc  libnl-route-3.0.pc  libnl-xfrm-3.0.pc
library_goke/libpng/lib/: libpng16.la  libpng16.so.16.37.0
library_goke/libpng/lib/pkgconfig/: libpng16.pc
library_goke/mbedtls/cmake/: MbedTLSTargets-release.cmake  MbedTLSTargets.cmake
library_goke/mp4v2/include/mp4v2/: project.h
library_goke/mp4v2/lib/: libmp4v2.la
library_goke/openssl/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
library_goke/osdBase/include/: osd_bitmap.h  osd_font.h  utf8_to_gbk.h
library_goke/wireless_tools/lib/: libiw.so.29
library_goke/wireless_tools/sbin/: ifrename  iwconfig  iwevent  iwgetid  iwlist  iwpriv  iwspy
library_goke/zbar/lib/: libzbar.la
library_goke/zbar/lib/pkgconfig/: zbar.pc
library_goke/zlib/lib/pkgconfig/: zlib.pc
module/hi_ptz/: Makefile  hi_ptz.c  hi_ptz.h  hi_ptz.ko  test  test.c
server/aliyun/: aliyun.c  aliyun.h  aliyun_interface.h  config.c  config.h  linkkit_client.c  linkkit_client.h  linkvisual_client.c  linkvisual_client.h
server/audio/: audio.c  audio.h  audio_interface.h  config.c  config.h
server/device/: config.c  config.h  device.c  device.h  device_interface.h  file_manager.c  file_manager.h  gk_gpio.c  gk_gpio.h  gk_motor.c  gk_motor.h  gk_sd.c  gk_sd.h  gk_watchdog.c  gk_watchdog.h  sd_control.c  sd_control.h  wifi_tools.c  wifi_tools.h
server/goke/: goke.c  goke.h  goke_interface.h
server/goke/hisi/: hisi.h  hisi_audio.c  hisi_common.h  hisi_encoder.c  hisi_global.c  hisi_ive.c  hisi_region.c  hisi_sys.c  hisi_vi.c  hisi_vpss.c
server/goke/hisi/adp/: audio_aac_adp.c  audio_dl_adp.c
server/goke/hisi/bmp/: loadbmp.c
server/manager/: config.c  config.h  manager.c  manager.h  manager_interface.h  sleep.c  sleep.h  timer.c  timer.h
server/player/: config.c  config.h  player.c  player.h  player_interface.h
server/recorder/: config.c  config.h  recorder.c  recorder.h  recorder_interface.h
server/video/: config.c  config.h  goke_osd.c  goke_osd.h  goke_overlay.c  goke_overlay.h  isp.c  isp.h  od.c  od.h  osd.c  osd.h  video.c  video.h  video_interface.h
smart_living/components/timer_service/: device_timer.c
smart_living/include/: iot_export.h
smart_living/include/exports/: iot_export_coap.h
smart_living/src/infra/system/: guider.c
smart_living/src/infra/utils/kv/: aiot_kv_api.h
smart_living/src/protocol/mqtt/client/: mqtt_client.c
smart_living/src/ref-impl/hal/os/ubuntu/: HAL_OS_linux.c
smart_living/src/sdk-impl/: impl_linkkit.c
